--- a/philo/Makefile
+++ b/philo/Makefile
@@ -5,6 +5,7 @@ INC_DIR	= ./include
 
 SRC		= 	$(SRC_DIR)/ending_program.c \
 			$(SRC_DIR)/initialization.c \
+			$(SRC_DIR)/main.c \
 			$(SRC_DIR)/philo.c \
 			$(SRC_DIR)/utils.c		
 
