big_brother done but program not working good

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,5 @@
 NAME  	= philo
 
-LIB_DIR	= ../libft
 INC_DIR	= ./include
 SRC_DIR	= ./src
 OBJ_DIR	= ./obj
@@ -13,26 +12,23 @@ SRC		= 	ending_program.c \
 OBJ		= 	$(SRC:%.c=$(OBJ_DIR)/%.o)
 
 CPPFLAGS := $(CPPFLAGS)
-CFLAGS 	= 	-Wall -Wextra -Werror -I$(LIB_DIR) -I$(INC_DIR) 
+CFLAGS 	= 	-Wall -Wextra -Werror -I$(INC_DIR) 
 
 all : $(NAME)
 
-$(NAME) : $(OBJ)
-	@make -C $(LIB_DIR)
-	@gcc $^ $(CFLAGS) $(LIB_DIR)/libft.a -o $@
-
-$(OBJ) : $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
-	@mkdir -p obj
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
+	@mkdir -p $(OBJ_DIR)
 	gcc -c $(CFLAGS) $< -o $@
+
+$(NAME): $(OBJ)
+	@gcc $(OBJ) -o $@
 
 clean :
 	@rm -rf $(OBJ)
 	@rm -rf $(OBJ_DIR)
-	@make clean -C $(LIB_DIR)
 	
 fclean : clean
 	@rm -rf $(NAME)
-	@make fclean -C $(LIB_DIR)
 
 re : fclean all
 
