--- a/philo/Makefile
+++ b/philo/Makefile
@@ -12,13 +12,13 @@ SRC		= 	ending_program.c \
 OBJ		= 	$(SRC:%.c=$(OBJ_DIR)/%.o)
 
 CPPFLAGS := $(CPPFLAGS)
-CFLAGS 	= 	-Wall -Wextra -Werror -I$(INC_DIR) 
+CFLAGS 	= 	-Wall -Wextra -Werror -I$(INC_DIR)
 
 all : $(NAME)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	@mkdir -p $(OBJ_DIR)
-	gcc -c -g $(CFLAGS) $< -o $@
+	gcc -c $(CFLAGS) $< -o $@
 
 $(NAME): $(OBJ)
 	@gcc $(OBJ) -o $@
